--- a/styles/style.css
+++ b/styles/style.css
@@ -9,4 +9,7 @@
     border: solid 1px;
     height: 50px;
     width: 50px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
 }
