--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,20 @@
 .game-board {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    height: 150px;
-    width: 150px;
+    height: 300px;
+    width: 300px;
+    margin: 50px; 
 }
 
 .game-square {
     border: solid 1px;
-    height: 50px;
-    width: 50px;
+    height: 100px;
+    width: 100px;
     text-align: center;
     vertical-align: middle;
-    line-height: 50px;
+    line-height: 100px;
+    font-size: 40px;
+    font-family: sans-serif;
 }
 
 .game-end-text {
@@ -20,6 +23,28 @@
     align-items: center;
 }
 
-#try-again-button{
+#winner-text{
+    font-family: sans-serif;
+    font-size: x-large;
+    padding: 50px;
+}
+
+#try-again-button {
     display: none;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: aliceblue;
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    background-color: aliceblue;
+    font-family: sans-serif;
+}
+
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
